<resources>
    <string name="app_name">Campaign Test</string>
    <string name="action_settings">Settings</string>
    <string name="package_name">@string/package_name_not_translated</string>
    <string name="package_name_hint" translatable="false">com.google.example</string>
    <string name="tracking_id">@string/tracking_id_not_translated</string>
    <string name="tracking_id_hint">15 digits</string>
    <string name="media_code_parameter">@string/media_code_parameter_not_translated</string>
    <string name="media_code_parameter_hint" translatable="false">wt_mc</string>
    <string name="media_code_value">@string/media_code_value_not_translated</string>
    <string name="media_code_value_hint" translatable="false">test</string>
    <string name="button_test">TEST</string>
    <string name="button_help">HELP</string>
    <string name="error_no_launch">The tested application should be launched. If this hasn\'t happened, please check if the application package name is entered correctly.</string>
    <string name="error_incorrect_referer">Incorrect referrer:%s</string>
    <string name="error_lack_of_referer">Referrer missing:%s</string>
    <string name="error_incorrect_package">"An application with the package name %s isn\'t installed on this device. Please verify that the package name of the app is correct."</string>
    <string name="html_help"><![CDATA[<h1 style="color: #5e9ca0;">User Guide</h1>
<p>This application tests Webtrekk Installation Campaigns. The app to be tested is launched in the same manner as when the application is installed from the Google Play Store.</p>
<p>An app with the Webtrekk SDK 4.2.4 or newer is required. In that case the Media Code will be sent to Webtrekk with the next tracking call. To test this, follow these steps:</p>
<ol>
<li>Install your application on this device, but don\'t run it. This is important for testing the installation tracking.</li>
<li>Enter all required attributes: the package name of the app to be tested, the Webtrekk Tracking ID, the media code parameter as defined in the campaign setup and the media code for the install campaign.</li>
<li>Press the "TEST" button. Your application should be launched.</li>
<li>Check the outgoing tracking calls using a proxy like Charles or wait and check the session in Webtrekk Analytics.</li>
</ol>]]></string>
    <string name="error_caption">Error</string>
    <string name="error_ok">OK</string>
    <string name="tracking_id_error_string">Tracking id needs to be 15 digits long</string>
    <string name="webtrekk_link" translatable="false"><a href="https://www.webtrekk.com/en/solutions/whats-new/?wt_mc=ref.apptest.201701_cw10.app_test.sdk">www.webtrekk.com/whats-new</a></string>
    <string name="package_name_not_translated" translatable="false">Package name:</string>
    <string name="tracking_id_not_translated" translatable="false">Tracking id:</string>
    <string name="media_code_parameter_not_translated" translatable="false">Media Code parameter:</string>
    <string name="media_code_value_not_translated" translatable="false">Media Code value:</string>

</resources>
