<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.webtrekk.referrertest.MainActivity">
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_weight="50"
            android:text="@string/package_name"/>
        <EditText
            android:id="@+id/application_id"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:hint="@string/package_name_hint"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:maxLines="1"
            android:text="com.webtrekk.webtrekksdk.training" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_weight="50"
            android:text="@string/tracking_id"/>
        <EditText
            android:id="@+id/tracking_id"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:hint="@string/tracking_id_hint"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:maxLines="1"
            android:text="123451234512345" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_weight="50"
            android:text="@string/media_code_parameter"/>
        <EditText
            android:id="@+id/media_code_par"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:hint="@string/media_code_parameter_hint"
            android:text="mc"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:maxLines="1"
            android:selectAllOnFocus="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_weight="50"
            android:text="@string/media_code_value"/>
        <EditText
            android:id="@+id/media_code_val"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:hint="@string/media_code_value_hint"
            android:text="mediaCodeTest"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:maxLines="1"
            android:selectAllOnFocus="true" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <Button
            android:id="@+id/test_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/button_test"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_launch_err_text"
            android:id="@+id/final_help_text"
            android:visibility="invisible"
            android:padding="5dp"
            android:textColor="@color/colorAccent" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="10"
        android:layout_height="0dp">
        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="end|center_vertical"
            android:text="@string/button_help"/>
    </FrameLayout>
    </LinearLayout>
    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</RelativeLayout>
